--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-hamburger-menu": "^1.1.1",
     "react-scripts": "3.3.0"
   },
   "scripts": {
