--- a/client/package.json
+++ b/client/package.json
@@ -33,5 +33,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "storybook-react-router": "^1.0.8"
   }
 }
