--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-gesture-gallery": "^1.1.0",
     "react-gesture-responder": "^2.1.0",
     "react-responsive-carousel": "^3.1.51",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "react-slick": "^0.25.2",
     "slick-carousel": "^1.8.1"
